--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 *.zip
 
 # Module directory
+.terraform/
 .terraform
+__pycache__/
 .idea
 *.iml
 *.orig
-.build-harness
-build-harness
 *.ini
 *~HEAD
 *backup
@@ -20,3 +20,4 @@ lambda
 *backup
 *.bak
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
