--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
     hooks:
       - id: markdownlint
   - repo: git://github.com/adrienverge/yamllint
-    rev: v1.25.0
+    rev: v1.26.0
     hooks:
       - id: yamllint
         name: yamllint
@@ -41,11 +41,15 @@ repos:
         language: python
         types: [file, yaml]
   - repo: git://github.com/jameswoolfenden/pre-commit
-    rev: v0.1.33
+    rev: v0.1.35
     hooks:
       - id: terraform-fmt
         language_version: python3.8
-      - id: checkov-scan
-        language_version: python3.8
       - id: tf2docs
         language_version: python3.8
+  - repo: git://github.com/bridgecrewio/checkov
+    rev: 1.0.775
+    hooks:
+      - id: checkov
+        verbose: true
+        entry: checkov -d example/examplea
