--- a/example/examplea/Makefile
+++ b/example/examplea/Makefile
@@ -1,4 +1,4 @@
-#Makefile
+# Makefile
 ifdef OS
    BLAT = $(powershell  -noprofile rm .\.terraform\ -force -recurse)
    RM = $(powershell  –noprofile rm .\.terraform\ -force -recurse)
@@ -15,7 +15,7 @@ all: init plan build
 
 init:
 	$(RM)
-	terraform init -reconfigure
+	terraform init -reconfigure -upgrade
 
 plan:
 	terraform plan -refresh=true
@@ -38,8 +38,9 @@ docs:
 	terraform-docs md . > README.md
 
 valid:
-	terraform fmt
+	terraform fmt -recursive
 	checkov -d . --external-checks-dir ../../checkov
+	tfsec .
 
 target:
 	@read -p "Enter Module to target:" MODULE;
