--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: 0.0.2
     hooks:
       - id: shell-lint
+        exclude: template|\.template$
   - repo: git://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
     hooks:
@@ -51,4 +52,4 @@ repos:
     hooks:
       - id: checkov
         verbose: true
-        entry: checkov -d example/examplea
+        entry: checkov -d example/examplea --external-checks-dir checkov
